# assimp-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  conda-forge.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_boost_cpp1.72.0.yaml  linux_64_boost_cpp1.74.0.yaml  linux_aarch64_.yaml  linux_aarch64_boost_cpp1.72.0.yaml  linux_aarch64_boost_cpp1.74.0.yaml  linux_ppc64le_.yaml  linux_ppc64le_boost_cpp1.72.0.yaml  linux_ppc64le_boost_cpp1.74.0.yaml  osx_.yaml  osx_64_.yaml  osx_64_boost_cpp1.72.0.yaml  osx_64_boost_cpp1.74.0.yaml  osx_arm64_.yaml  win_.yaml  win_64_.yaml  win_64_boost_cpp1.72.0.yaml  win_64_boost_cpp1.74.0.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
.github/: CODEOWNERS
recipe/: 5250.patch  6627.patch  bld.bat  build.sh  build_py.sh  do_not_export_debug_symbols_gcc.patch  fix_cmake_config.diff  fix_rt_link.patch  meta.yaml  patch.diff  patch_osx.diff  run_test.bat  run_test.sh
recipe/test/: CMakeLists.txt  assimp_main.cpp
